2011-05-01 SAncho Lerena <slerena@artica.es>

	*  include/help/en/help_reporting_advanced_tab.php,
	include/help/es/help_reporting_advanced_tab.php: MIssing help files.

2011-04-25 Javier Lanz <javier.lanz@artica.es>

	* operation/agentes/tactical.php: Fixed a style problem on Internet
	Explorer

	Fix: #3279238

2011-04-20 Javier Lanz <javier.lanz@artica.es>

	* godmode/alerts/configure_alert_action.php: Fixed a small bug about
	entities on "Command preview"

	Fix: #3276373

2011-04-19 Javier Lanz <javier.lanz@artica.es>

	* include/functions_modules.php: Fixed an error about the agent status
	* godmode/agentes/agent_template.php: Fixed an error about the agent
	status

	Fix: #3251822

2011-04-19 Javier Lanz <javier.lanz@artica.es>

	* godmode/modules/manage_network_components_form.php: Enabled port field
	on Network Components - Remote SNMP network agent
	* godmode/modules/manage_network_components_form_plugin.php: Added port
	field on Network Components - Plugin Components
	* include/functions_filemanager.php: Added a 'base64_encode' to deal with
	html entities in collection's files

2011-04-18 Miguel de Dios  <miguel.dedios@artica.es>

	Merged change from trunk.
	
	* operation/agentes/estado_monitores.php: added a toggle button to show the
	the entire value or sub string for value (by default).

2011-04-18 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Added a 'base64_encode' to deal with
	html entities in collection's files

	Fix: #3286063

2011-04-18 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Fixed a problem with html entities
	* include/get_file.php: Added base64_decode for getting a get parameter

	Fixes: #3286063

2011-04-14 Javier Lanz <javier.lanz@artica.es>

	* godmode/massive/massive_edit_modules.php: Added functionality to edit
	SNMP version on massive operations

2011-04-13 Sancho Lerena <slerena@artica.es>

	* operation/servers/view_server_detail.php,
	godmode/servers/manage_recontask.php,